# bowshock

./: CMakeLists.txt  README.md  copy_deps.py
cmake/: FindThirdPartyHeaders.cmake
src/: CMakeLists.txt  assimp_loader.cpp  assimp_loader.h  bs_time.cpp  bs_time.h  bs_window.cpp  bs_window.h  camera.cpp  camera.h  config.cpp  config.h  engine.cpp  engine.h  mesh.cpp  mesh.h  model.cpp  model.h  model_container.cpp  model_container.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture_container.cpp  texture_container.h  viewport.cpp  viewport.h
